[package]
name = "easy_289"
version = "0.0.0"
edition = "2021"

[dependencies]
#itertools = "0.10.3"
#lazy_static = "1.4.0"
#rand = "0.8.4"
#rand_pcg = "0.3.1"
#regex = "1"
serde = {version = "1", features = ["derive"]}
reqwest = {version = "0", features = ["blocking", "json"]}
tokio = {version = "1", features = ["full"]}
